page de presentation fini

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,54 @@
 .App {
+
+
     @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');
+
+    .scrollToBottom{
+
+        display: flex; /* Utilisez Flexbox pour centrer */
+        justify-content: center; /* Centrer horizontalement */
+        align-items: center; /* Centrer verticalement */
+        font-size: 40px;
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: #426b1f; /* Couleur de fond */
+        color: #fff; /* Couleur du texte */
+
+        cursor: pointer; /* Curseur de type pointer au survol */
+        outline: none;
+        border: solid 2px white;
+        transition: 0.2s ease ;
+        position: absolute;
+        bottom: 209px;
+        right: 30px;
+    }
+
+    .scrollToBottom:hover{
+
+        transform: scale(105%);
+        background-color: white;
+        color: #426b1f;
+        border: solid 2px #2e4219;
+    }
+
+    .presentation1{
+        height: 100vh;
+        position: relative;
+
+    }
+
+
+    @media only screen and (max-width: 1024px){
+        .presentation1{
+            height: auto;
+        }
+
+        .scrollToBottom{
+            display: none;
+        }
+    }
 
 }
 
