--- a/src/navbar.css
+++ b/src/navbar.css
@@ -43,6 +43,16 @@ li a {
     background-color: #426b1f;
     color: white;
     font-family: "Inter", sans-serif;
+    transition: 0.2s ease ;
+    cursor: pointer;
+    border: solid 0.5px transparent;
+
+}
+
+.basket:hover{
+    transform: scale(105%);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    border: solid 0.5px #2e4219;
 }
 
 .btn-nav{
@@ -65,7 +75,7 @@ li a {
 @media only screen and (max-width: 1024px){
 
     .nav{
-        border-bottom: solid 0.1px #000000;
+        border-bottom: solid 0.1px #c7c6c6;
     }
 
 
@@ -81,6 +91,7 @@ li a {
         background-color: #ffffff;
         transition: 0.4s;
         transform: translateY(-100vh);
+        z-index: 2;
 
     }
 
@@ -100,27 +111,33 @@ li a {
 
 
 
+
     }
 
     li:hover {
         color: gray;
 
+
+
     }
 
     .basket{
-        background-color: #5c8541;
-        border-radius: 30px;
-        padding: 10px 75px;
-        font-size: 1.2rem;
+        backgound-color: #426b1f;
+        padding: 10px 30px;
+        border-radius: 10px;
         transition: 0.2s all ease ;
         cursor: pointer;
         border: solid 0.5px transparent;
-        font-family: "Newsreader";
+        font-size:15px;
+
+
     }
 
     .basket:hover{
-        border: solid 0.5px white;
+        border: solid 0.5px #2e4219;
         transform: scale(105%);
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+
     }
 
     .btn-nav{
@@ -133,10 +150,10 @@ li a {
 
     .close{
         position: absolute;
-        top: 1rem;
-        right: 1.74rem;
+        top: 1.2rem;
+        right: 1.90rem;
         padding: 10px;
-        font-size: 1.7rem;
+        font-size: 1.5rem;
         cursor: pointer;
         background: transparent;
         border-radius: 10px;
